<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="83dp"
            android:layout_height="27dp"
            android:id="@+id/logo"
            android:scaleType="fitCenter" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="@+id/background" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishButt"
            android:background="@drawable/swoosh_toggle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/background"
            android:textColor="@android:color/white" android:textSize="18sp" android:onClick="finishButtClicked"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/begginerSkillButt" android:layout_weight="1"
                android:textOff="@string/beginner" android:textOn="@string/beginner"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textAllCaps="false" android:layout_marginEnd="16dp" android:onClick="onBegginerClicked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerSkillButt" android:layout_weight="1"
                android:textOff="@string/baller" android:textOn="@string/baller"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textAllCaps="false" android:layout_marginStart="16dp" android:onClick="onBallerClicked"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>